@@ -87,6 +87,9 @@
 			"extlibs/momentjs/moment.js",
 			"extlibs/numeraljs/numeral.js",
 			"scripts/contentscripts/maps.js"
+		],
+		"css": [
+			"styles/contentscripts/maps.css"
 		]
 	}, {
 		"matches": [
