@@ -1,6 +1,9 @@
 Bugfixes are not included in this changelog. See github:
 https://github.com/resident-uhlig/chrome-hyperiums7/issues
 
+XXXX-XX-XX XX:XX:XX Version X.X.X
+* Added map on trading map page
+
 2013-12-21 20:06:00 Version 0.2.0
 * Added link to forum on "last 20 messages" page (for alliances)
 * Added sum of Ground AvgP generation to controlled planets summary
